# CppCourse

Lab2/: CMakeLists.txt
Lab2/sfml1.1/: CMakeLists.txt  traffic_light.cpp
Lab2/sfml1.2/: CMakeLists.txt  initials.cpp
Lab2/sfml1.3/: CMakeLists.txt  house.cpp
Lab3/: CMakeLists.txt
Lab3/sfml2.1/: main.cpp
Lab3/sfml2.2/: main.cpp
cpp1.1/: hello.cpp
cpp1.2/: hello_err.cpp
sfml3/sfml3.1/: main.cpp
sfml3/sfml3.2/: main.cpp
sfml3/sfml3.3/: main.cpp
workshop/workshop1.1/: main.cpp
workshop/workshop1.2/: main.cpp
workshop/workshop1.3/: main.cpp
workshop/workshop1.4/: main.cpp
workshop2/: CMakeLists.txt
workshop2/workshop2.1/: main.cpp
workshop2/workshop2.2/: main.cpp
workshop2/workshop2.3/: main.cpp
workshop2/workshop2.4/: main.cpp
workshop2/workshop2.5/: CMakeLists.txt  main.cpp
workshop2/workshop2.6/: CMakeLists.txt  main.cpp
workshop2/workshop2.7/: CMakeLists.txt  main.cpp
workshop2/workshop2.8/: CMakeLists.txt  main.cpp
workshop3/: CMakeLists.txt
workshop3/workshop3.1/: CMakeLists.txt  ball.cpp  ball.hpp  main.cpp  main.hpp
workshop3/workshop3.2/: CMakeLists.txt  main.cpp
workshop3/workshop3.3/: CMakeLists.txt  main.cpp  main.hpp
